openmediavault (0.3.0.13) stable; urgency=low

  * Mantis 0000497: Various errors after last update to shared folders.
  * Mantis 0000501: Permanent mount error for the FTP folders.
  * Mantis 0000504: Domain field doesn't allow domains beginning with a
    number.
  * Mantis 0000503: Volume groups containing the character '-' are not
    processed correctly in association with logical volumes.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 09 Jun 2012 01:16:46 +0200

openmediavault (0.3.0.12) stable; urgency=low

  * Flush mailq once a day if email notification service is disabled.
  * Fix bug in Apt::getUpgraded RPC.
  * Send hostname to DHCP server.
  * Mantis 0000488: Display icon in "Enabled" columns.
  * Mantis 0000490: Cannot set DNS hostname in Masquerade address field of
    FTP service.
  * Mantis 0000492: NTFS disk names jumping around.
  * Mantis 0000494: The folders created by the shared can't be delete by
    the GUI.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 26 May 2012 19:12:08 +0200

openmediavault (0.3.0.11) stable; urgency=low

  * Update locales.
  * Allow numbers as first character in a domain name.
  * Fix typo in language combobox. Thanks to Simon Jonsson.
  * Mantis 0000476: Mask whole webgui during loading Debian package lists.
    This will prevent user from clicking the 'Check' button twice while APT
    database is locked.
  * Mantis 0000480: Hosts Datei und fqdn mit IP 127.0.0.1

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 19 May 2012 22:45:12 +0200

openmediavault (0.3.0.10) stable; urgency=low

  * Update locales.
  * Add ability to reset WebGUI states, e.g. grid column order, which are
    stored in a browser cookie.
  * Add ability to group privileges grid.
  * Improve workflow, e.g. add typeahead to user/group comboboxes.
  * Mantis 0000469: Shared Folders: ACL - Filter on/off system users/groups.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 17 May 2012 00:28:53 +0200
