@@ -2,10 +2,13 @@ openmediavault (0.3.0.13) stable; urgency=low
 
   * Mantis 0000497: Various errors after last update to shared folders.
   * Mantis 0000501: Permanent mount error for the FTP folders.
-  * Mantis 0000504: Domain field doesn't allow domains beginning with a
-    number.
   * Mantis 0000503: Volume groups containing the character '-' are not
     processed correctly in association with logical volumes.
+  * Mantis 0000504: Domain field doesn't allow domains beginning with a
+    number.
+  * Mantis 0000512: Improve FileSystemMgmt::mount and FileSystemMgmt::umount
+    RPC's to simply mount/umount a filesystem without create/delete fstab
+    entries.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sat, 09 Jun 2012 01:16:46 +0200
 
